fixed some bug issues css responsive on mobile media

--- a/style/style.css
+++ b/style/style.css
@@ -180,12 +180,13 @@
         top:0;
     }
     nav .navlinks{
-        position: absolute;
+        position: fixed;
         top: 110px;
         right: -60%;
         bottom: 0;
         width: 60%;
         height: 100vh;
+        overflow-y: auto;
         background-color: #222;
         z-index: 3;
         box-shadow: 5px 13px 30px rgba(0,0,0,0.1);
@@ -204,11 +205,13 @@
         right: 0;
     }
 }
+
+
 @media(max-width: 768px)
 {
     .container{
         flex-direction: column;
-        padding-top:2rem;
+        padding-top: 2rem
     }
     .hero-text{
         padding: 40px 0px;
